fixing some bugs

--- a/djangoProject1/templates/comp_burreau.html
+++ b/djangoProject1/templates/comp_burreau.html
@@ -16,7 +16,7 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h3 class="page-title">Dashboards</h3>
+                        <h3 class="page-title">Desktop</h3>
                     </div>
                 </div>
             </div>
