--- a/djangoProject1/templates/includes/header.html
+++ b/djangoProject1/templates/includes/header.html
@@ -13,12 +13,12 @@
                         <!-- <b class="logo-icon p-l-10"> -->
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                             <!-- Dark Logo icon -->
-                           <!-- <img src="{% static 'images/logo-icon.png' %}" alt="homepage" class="light-logo" />-->
+                         <!--   <img src="{% static 'images/logo.png' %}" width="100" height="100" alt="homepage" class="light-logo" />
 
-                        </b>
+                        </b>  -->
                         <!--End Logo icon -->
                          <!-- Logo text -->
-                       <!-- <span class="logo-text">
+                 <!--       <span class="logo-text">
                               dark Logo text
                              <img src="{% static 'images/logo-text.png' %}" alt="homepage" class="light-logo" />
 
@@ -27,7 +27,7 @@
                         <!-- <b class="logo-icon"> -->
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                             <!-- Dark Logo icon -->
-                            <!-- <img src="{% static 'images/logo-text.png' %}" alt="homepage" class="light-logo" /> -->
+                         <!--   <img src="{% static 'images/logo-text.png' %}" alt="homepage" class="light-logo" /> -->
 
                         <!-- </b> -->
                         <!--End Logo icon -->
