--- a/djangoProject1/templates/includes/sidebar.html
+++ b/djangoProject1/templates/includes/sidebar.html
@@ -14,7 +14,7 @@
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'desktop' %}" aria-expanded="false"><i class="mdi mdi-road-variant"></i><span class="hide-menu">Desktop</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'dashboarddesktop' %}" aria-expanded="false"><i class="fas fa-history"></i><span class="hide-menu">Dashboard</span></a></li>
                         <h4 class="sidebar-item">Smartphone :</h4>
-                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'smartphone' %}" aria-expanded="false"><i class="mdi mdi-road-variant"></i><span class="hide-menu">Smartphone</span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'smartphone' '1' %}" aria-expanded="false"><i class="mdi mdi-road-variant"></i><span class="hide-menu">Smartphone</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="{% url 'dashboardsmartphone' %}" aria-expanded="false"><i class="fas fa-history"></i><span class="hide-menu">Dashboard</span></a></li>
 
                         {#  <h4 class="sidebar-item">Pc Gamer :</h4> #}
