--- a/djangoProject1/templates/comp_smartphone.html
+++ b/djangoProject1/templates/comp_smartphone.html
@@ -16,7 +16,7 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h3 class="page-title">Dashboards</h3>
+                        <h3 class="page-title">Smartphone</h3>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,37 @@
          </form>
 
     {% if dict %}
-
+<h1 class="col-sm-2 text-right control-label col-form-label" style = "position:relative; left:800px; top:-200px;"> Price :</h1>
+        <div class="form-check" style = "position:relative; left:1000px; top:-190px;">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value=" {% url 'smartphone' '0'  %}" onclick="if (this.checked) { window.location = this.value; }" >
+          <label class="form-check-label" for="flexRadioDefault1">
+            < 500 DT
+          </label>
+        </div>
+        <div class="form-check" style = "position:relative; left:1000px; top:-180px;">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value=" {% url 'smartphone' '1'  %}" onclick="if (this.checked) { window.location = this.value; }" >
+          <label class="form-check-label" for="flexRadioDefault1">
+            500 DT - 1000 DT
+          </label>
+        </div>
+        <div class="form-check" style = "position:relative; left:1000px; top:-170px;">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value=" {% url 'smartphone' '2'  %}" onclick="if (this.checked) { window.location = this.value; }">
+          <label class="form-check-label" for="flexRadioDefault2">
+            1000 DT - 1500 DT
+          </label>
+        </div>
+        <div class="form-check" style = "position:relative; left:1000px; top:-160px;">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" value=" {% url 'smartphone' '3'  %}" onclick="if (this.checked) { window.location = this.value; }">
+          <label class="form-check-label" for="flexRadioDefault3">
+            1500 DT - 2000 DT
+          </label>
+        </div>
+        <div class="form-check" style = "position:relative; left:1000px; top:-150px;">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" value=" {% url 'smartphone' '4'  %}" onclick="if (this.checked) { window.location = this.value; }">
+          <label class="form-check-label" for="flexRadioDefault4">
+            > 2000 DT
+          </label>
+        </div>
 
             <!-- ============================================================== -->
             <!-- End Bread crumb and right sidebar toggle -->
@@ -41,7 +71,7 @@
             <!-- ============================================================== -->
             <!-- Container fluid  -->
             <!-- ============================================================== -->
-             <div class="container-fluid" >
+             <div class="container-fluid" style = "position:relative; top:-100px;">
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
